5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1667_2973.log
== TEST (2019-04-16 16:12:22) 
-- CODE:
s = int(input("digite a posicao inicial do objet em metroso: "))
v =  int(input("digite a velocidade do ojbeto em metros por segundo: "))
t = int(input("digite o tempo de deslocamento em segundos: "))

S = s + (v*t)

vl = 100

if S>100:
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:26) 
-- CODE:
s = int(input("digite a posicao inicial do objeto em metros: "))
v =  int(input("digite a velocidade do ojbeto em metros por segundo: "))
t = int(input("digite o tempo de deslocamento em segundos: "))

S = s + (v*t)

vl = 100

if S>100:
	print(S)
	print("ACIMA")
else:
	print(S)
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:13:41) 
-- CODE:
s = int(input("digite a posicao inicial do objeto em metros: "))
v =  int(input("digite a velocidade do ojbeto em metros por segundo: "))
t = int(input("digite o tempo de deslocamento em segundos: "))

S = s + (v*t)

vl = 100

if S>100:
	print(S)
	print("ACIMA")
else:
	print(S)
	print("OK")
-- EXECUTION TIME:
0.132791
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:04) 
-- CODE:
s = int(input("digite a posicao inicial do objeto em metros: "))
v =  int(input("digite a velocidade do ojbeto em metros por segundo: "))
t = int(input("digite o tempo de deslocamento em segundos: "))

S = s + (v*t)

vl = 100

if S>vl:
	print(S)
	print("ACIMA")
else:
	print(S)
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:14:25) 
-- CODE:
s = int(input("digite a posicao inicial do objeto em metros: "))
v =  int(input("digite a velocidade do ojbeto em metros por segundo: "))
t = int(input("digite o tempo de deslocamento em segundos: "))

S = s + (v*t)

vl = 100

if S>vl:
	print(S)
	print("ACIMA")
else:
	print(S)
	print("OK")
-- EXECUTION TIME:
0.155007
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:15:49) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input()

S = s + (v*t)

vl = 100

if S<+vl:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.114539
-- ERROR:
  File "/home/codebench/codes/1667/2973/main.py", line 5
    S = s + (v*t)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:53) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input()

S = s + (v*t)

vl = 100

if S<+vl:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- ERROR:
File "XXXX", line 5
    S = s + (v*t)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:16:23) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input()

S = s + (v*t)

vl = 100

if S<=vl:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.159605
-- ERROR:
  File "/home/codebench/codes/1667/2973/main.py", line 5
    S = s + (v*t)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:25) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input()

S = s + (v*t)

vl = 100

if S<=vl:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- ERROR:
File "XXXX", line 5
    S = s + (v*t)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:31) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input()

S = s + (v*t)

vl = 100

if S<=vl:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- ERROR:
File "XXXX", line 5
    S = s + (v*t)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:02) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input())

S = s + (v*t)

vl = 100

if S<=vl:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:17:16) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input())

S = s + (v*t)

vl = 100

if S<=vl:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.151372
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:21) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input())

S = s + (v*t)

vl = 100

if S<=vl:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:17:53) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input())

S = s + (v*t)

vl = 100

if S<=vl:
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.135198
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:56) 
-- CODE:
s = int(input())
v =  int(input())
t = int(input())

S = s + (v*t)

vl = 100

if S<=vl:
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:39) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<=100:
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:57) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<=100:
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:19:06) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<=100:
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.214996
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:19:15) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<=100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.168695
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:17) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<=100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:47) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<=100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:21:07) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<=100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.137766
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:28) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:21:37) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.169704
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:54) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:30) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:22:41) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if S<100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.14714
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:23:57) 
-- CODE:
s = float(input())
v = float(input())
t = float(input())

S = s + (v*t)

if S<100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.118363
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:27) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if s<=100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:57) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if v<=100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:26:06) 
-- CODE:
s = int(input())
v = int(input())
t = int(input())

S = s + (v*t)

if v<=100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.132403
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
